# parkrun-offline

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
ci/: azure-publish-artifact.yml
src/: clean.rs  html.rs  main.rs  parkrun.rs
